# brain_games

./: Cargo.toml  Makefile  README.md
.github/workflows/: rustci.yml
src/: cli.rs  consts.rs  engine.rs  lib.rs  utils.rs
src/games/: calc.rs  even.rs  gcd.rs  mod.rs  prime.rs  progression.rs
tests/: test_games.rs
