[package]
name = "brain_games"
version = "0.1.0"
edition = "2021"
authors = ["WeedRap <1337rafik.weed@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "brain_games"

[dependencies]
rand = "0.8.5"
rustyline = "13.0.0"
num = "0.4.1"

[dev-dependencies]
regex = "1.10.2"
cargo-tarpaulin = "0.27.3"
clippy = "0.0.302"


